Add row after navbar for small screens
This row shows the amount to be reimbursed and a `Filters` text
plus bar icon, which when clicked, expands/collapses the form to filter
the table.

The css to style it appropriately is added to the App.css file,
in addition to the inline style done with Bootstrap

--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,11 @@
   font-style: italic;
   font-weight: 500;
 }
+
+.bg-grey {
+  background-color: hsla(214, 61%, 25%, 0.05)
+}
+
+.btn-grey {
+  background-color: #EFEFEF;
+}
