--- a/src/App.css
+++ b/src/App.css
@@ -141,3 +141,15 @@
   width: 0;
   height: 0;
 }
+
+.header-flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+}
+
+.btn-flex-container {
+  display: flex;
+  flex-direction: row;
+}
